# rust_measure_time

./: Cargo.toml  README.md
measure_time_example/: Cargo.toml  Readme.md  expand.rs
measure_time_example/src/: main.rs
src/: formatted_duration.rs  lib.rs
