[package]
name = "measure_time"
version = "0.9.0"
edition = "2021"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PSeitz/rust_measure_time"
homepage = "https://github.com/PSeitz/rust_measure_time"
keywords = ["measure", "time", "elapsed", "wall", "humantime"]
license = "MIT"
description = """
Provices macros to measure the time until end of scope.
"""
categories = ["development-tools", "development-tools::profiling"]

[dependencies]
log = "0.4"
